# async-tiff

./: .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  versions.json
.github/: dependabot.yml
.github/workflows/: bench.yml  conventional-commits.yml  lint.yml  python-docs-publish.yml  python-wheels.yml  rust-release.yml  test-python.yml  test.yml  wasm-build.yml
benches/: read_tiff.rs
cli/: Cargo.toml
cli/src/: main.rs  storage.rs
cli/src/commands/: info.rs
fixtures/other/: geogtowgs_subset_USGS_13_s14w171.tif  grayscale_no_samplesperpixel.tif  readme.md
latest/: objects.inv
latest/api/geo/: index.html
latest/api/ifd/: index.html
latest/api/store/aws/: index.html
latest/api/store/azure/: index.html
latest/api/store/local/: index.html
lib/: Cargo.toml
lib/src/: lib.rs  predictor.rs  tag_value.rs  tiff.rs
lib/tests/: geo.rs
lib/tests/image_tiff/: decode_bigtiff_images.rs  util.rs
python/: CHANGELOG.md  Cargo.toml  DEVELOP.md  README.md  mkdocs.yml  pyproject.toml
python/docs/api/: array.md  enums.md
python/docs/overrides/partials/integrations/analytics/: plausible.html
python/python/async_tiff/: __init__.py  _array.pyi  _async_tiff.pyi  _decoder.pyi  _decoder_runtime.py  _ifd.pyi  _input.py  _tiff.pyi  _tile.pyi  enums.py
python/src/: array.rs  colormap.rs  decoder.rs  enums.rs  error.rs  geo.rs  ifd.rs  lib.rs  reader.rs  thread_pool.rs  tiff.rs  tile.rs  value.rs
python/src/reader/: aiohttp.rs  mod.rs
python/tests/: conftest.py  test_array.py  test_buffer.py  test_cog.py  test_colormap.py  test_exceptions.py  test_ifd.py  test_integration_rasterio.py  test_obspec.py  test_tiff.py  tmp.py  utils.py
src/: array.rs  async_reader.rs  cog.rs  cursor.rs  data_type.rs  decoder.rs  error.rs  ifd.rs  lib.rs  ndarray.rs  predictor.rs  reader.rs  tag_value.rs  tags.rs  tiff.rs  tile.rs
src/extension/: mod.rs  registry.rs
src/geo/: geo_key_directory.rs  mod.rs
src/metadata/: cache.rs  fetch.rs  mod.rs  reader.rs
src/test/: geo.rs  missing_samples_per_pixel.rs  mod.rs  ome_tiff.rs  util.rs
src/test/geotiff_test_data/: mod.rs
src/test/geotiff_test_data/rasterio_generated/: int16.rs  int8.rs  lerc.rs  lzma.rs  mod.rs  uint16.rs  unaligned_tiles.rs  webp.rs
src/test/geotiff_test_data/real_data/: eox.rs  mod.rs  vantor.rs
src/test/image_tiff/: decode_bigtiff_images.rs  decode_geotiff_images.rs  decode_images.rs  mod.rs  util.rs
src/tiff/: error.rs  ifd.rs  mod.rs
tests/: geo.rs  geogtowgs_tiff.rs  mod.rs  ome_tiff.rs
tests/image_tiff/: decode_geotiff_images.rs  decode_images.rs  encode_images.rs  mod.rs  util.rs
tests/images/: readme.md
v0.1.0/: objects.inv
v0.1.0-beta.2/: index.html  sitemap.xml
v0.1.0-beta.2/api/store/http/: index.html
v0.1.0-beta.2/api/tile/: index.html
v0.1.0-beta.2/search/: search_index.json
v0.1.0/api/decoder/: index.html
v0.1.0/api/store/config/: index.html
v0.1.0/api/store/gcs/: index.html
v0.1.0/api/tiff/: index.html
v0.1.0/api/tile/: index.html
v0.1.0/search/: search_index.json
v0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.2.0/api/store/aws/: index.html
v0.2.0/api/store/azure/: index.html
v0.2.0/api/store/config/: index.html
v0.2.0/api/thread-pool/: index.html
v0.2.0/api/tiff/: index.html
v0.2.0/search/: search_index.json
v0.3.0/: index.html  objects.inv  sitemap.xml
v0.3.0/api/geo/: index.html
v0.3.0/api/ifd/: index.html
v0.3.0/api/store/: index.html
v0.3.0/search/: search_index.json
v0.4.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.4.0-beta.1/: index.html  objects.inv  sitemap.xml
v0.4.0-beta.1/api/ifd/: index.html
v0.4.0-beta.1/api/tiff/: index.html
v0.4.0-beta.1/api/tile/: index.html
v0.4.0-beta.1/search/: search_index.json
v0.4.0/api/decoder/: index.html
v0.4.0/api/thread-pool/: index.html
v0.4.0/api/tile/: index.html
v0.4.0/search/: search_index.json
v0.5.0/: sitemap.xml
v0.5.0-beta.1/: sitemap.xml
v0.5.0-beta.1/api/array/: index.html
v0.5.0-beta.1/api/geo/: index.html
v0.5.0-beta.1/api/ifd/: index.html
v0.5.0-beta.1/api/store/: index.html
v0.5.0-beta.1/api/tiff/: index.html
v0.5.0-beta.2/: sitemap.xml
v0.5.0-beta.2/api/enums/: index.html
v0.5.0-beta.2/api/ifd/: index.html
v0.5.0-beta.3/: 404.html  objects.inv
v0.5.0-beta.3/CHANGELOG/: index.html
v0.5.0-beta.3/api/tiff/: index.html
v0.5.0-beta.3/search/: search_index.json
v0.5.0-beta.4/: sitemap.xml
v0.5.0-beta.4/search/: search_index.json
v0.5.0/api/geo/: index.html
v0.5.0/api/ifd/: index.html
v0.5.0/api/tile/: index.html
v0.6.0/: objects.inv  sitemap.xml
v0.6.0-beta.1/: sitemap.xml
v0.6.0-beta.1/search/: search_index.json
v0.6.0-beta.2/CHANGELOG/: index.html
v0.6.0-beta.2/api/decoder/: index.html
v0.6.0-beta.2/api/enums/: index.html
v0.6.0-beta.2/api/tiff/: index.html
v0.6.0-beta.2/api/tile/: index.html
v0.6.0-beta.2/search/: search_index.json
v0.6.0/CHANGELOG/: index.html
v0.6.0/api/array/: index.html
v0.6.0/api/store/: index.html
v0.6.0/search/: search_index.json
v0.7.0/: index.html  objects.inv  sitemap.xml
v0.7.0/CHANGELOG/: index.html
v0.7.0/api/enums/: index.html
v0.7.0/api/ifd/: index.html
v0.7.0/api/thread-pool/: index.html
v0.7.0/search/: search_index.json
v0.7.1/: 404.html  index.html  sitemap.xml
v0.7.1/CHANGELOG/: index.html
v0.7.1/api/array/: index.html
v0.7.1/api/decoder/: index.html
v0.7.1/api/enums/: index.html
v0.7.1/api/geo/: index.html
v0.7.1/api/ifd/: index.html
v0.7.1/api/store/: index.html
v0.7.1/api/thread-pool/: index.html
v0.7.1/api/tiff/: index.html
v0.7.1/api/tile/: index.html
v0.7.1/search/: search_index.json
v0.7.2/: 404.html  index.html  objects.inv  sitemap.xml
v0.7.2/CHANGELOG/: index.html
v0.7.2/api/array/: index.html
v0.7.2/api/decoder/: index.html
v0.7.2/api/enums/: index.html
v0.7.2/api/geo/: index.html
v0.7.2/api/ifd/: index.html
v0.7.2/api/store/: index.html
v0.7.2/api/thread-pool/: index.html
v0.7.2/api/tiff/: index.html
v0.7.2/api/tile/: index.html
v0.7.2/search/: search_index.json
(+32 files in other folders)
