[package]
name = "async-tiff-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line tools for async-tiff"

[[bin]]
name = "atiff"
path = "src/main.rs"

[dependencies]
async-tiff = { path = "../lib" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
object_store = { version = "0.12", features = ["http", "aws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }