[package]
name = "async-tiff"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Low-level asynchronous TIFF reader."
readme = "README.md"

[dependencies]
async-trait = "0.1.89"
byteorder = "1"
bytes = "1.7.0"
flate2 = "1.0.20"
futures = "0.3.31"
jpeg = { package = "jpeg-decoder", version = "0.3.0", default-features = false }
num_enum = "0.7.3"
object_store = { version = "0.12", optional = true }
reqwest = { version = "0.12", default-features = false, optional = true }
thiserror = "1"
tokio = { workspace = true }
weezl = "0.1.0"
zstd = "0.13"

[dev-dependencies]
object_store = { version = "0.12", features = ["http"] }
tiff = "0.9.1"
tokio = { workspace = true, features = ["macros", "fs", "rt-multi-thread", "io-util"] }
tokio-test = "0.4.4"

[features]
default = ["object_store", "reqwest"]
tokio = ["tokio/io-util"]
reqwest = ["dep:reqwest"]
object_store = ["dep:object_store"]