[package]
name = "py-async-tiff"
version = "0.6.0-beta.1"
authors = ["Kyle Barron <kyle@developmentseed.org>"]
edition = "2021"
description = "Fast, Async TIFF reader for Python with a Rust core."
readme = "README.md"
repository = "https://github.com/developmentseed/async-tiff"
license = "MIT OR Apache-2.0"
keywords = ["python", "geospatial"]
categories = ["science::geo"]
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_async_tiff"
crate-type = ["cdylib"]

[features]
abi3-py311 = ["pyo3/abi3-py311"]
extension-module = ["pyo3/extension-module"]

[dependencies]
async-tiff = { path = "../", features = ["jpeg2k", "webp", "lerc", "lzma"] }
async-trait = "0.1.89"
bytes = "1.10.1"
futures = "0.3.31"
object_store = "0.13"
pyo3 = { version = "0.27.0", features = ["macros"] }
pyo3-async-runtimes = "0.27"
pyo3-bytes = "0.5"
pyo3-object_store = "0.8.0"
rayon = "1.11.0"
tokio-rayon = "2.1.0"
thiserror = "2"

# We opt-in to using rustls as the TLS provider for reqwest, which is the HTTP
# library used by object_store.
# https://github.com/seanmonstar/reqwest/issues/2025
reqwest = { version = "*", default-features = false, features = [
    "rustls-tls-native-roots",
] }

[profile.release]
lto = true
codegen-units = 1
